fixing - center align nav item for mobile version

--- a/src/index.css
+++ b/src/index.css
@@ -225,6 +225,12 @@ h1, h2, h3, h4, h5, h6{
   box-shadow: 0 10px 40px rgba(46, 1, 1, 0.4);
 }
 
+/* nav items center align for mobile */
+.navbar-nav{
+  align-items: center;
+  text-align: center;
+}
+
 .navbar-brand-custom {
   font-family: var(--logo-font);
   font-weight: 700;
